2004-00-01  Damien Sandras  <dsandras@gnome.org>

	* src/endpoint.cpp, src/gatekeeper.cpp, src/gnomemeeting.cpp, 
	src/ils.cpp, src/lid.cpp, src/main_window.cpp, src/main_window.h,
	src/misc.cpp, src/misc.h, src/urlhandler.cpp: More GMObjectification.

2004-08-31  Julien Puydt  <jpuydt@free.fr>

	* lib/gm_events.h, lib/gm_events.c: New files, providing new signals
	for GObject, and an event dispatcher so the endpoint can emit them.
	* lib/gm_events_marshalers.list: New file, providing the marshalers for
	the previous files.
	* lib/Makefile.am: Handle building the previous files.
	* src/main_window.cpp: Make the new signals available.
	* src/endpoint.h, src/endpoint.cpp: Add in the dispatcher, the api to
	register to it, and emit the new signals.

2004-08-31  Damien Sandras  <dsandras@gnome.org>

	* src/sound_handling.cpp: Fixed #151499.

	* src/main_window.cpp: Changed error message so that it talks about
	a missing audio plugin instead of a missing audio manager as people
	are more familiar with the word 'plugin'.

2004-08-30  Damien Sandras  <dsandras@gnome.org>

	* NEWS: Updated with CVS news.	                                                                                
2004-08-30  Damien Sandras  <dsandras@gnome.org>

	* src/config.cpp, src/main_window.cpp, src/main_window.h: Merged
	two functions.

2004-08-30  Damien Sandras  <dsandras@gnome.org>

	* src/config.cpp: Minor change in comment.

2004-08-30  Damien Sandras  <dsandras@gnome.org>

	* src/config.cpp, src/main_window.cpp, src/main_window.h: Cleanups.

2004-08-30  Damien Sandras  <dsandras@gnome.org>

	* src/config.cpp, src/endpoint.cpp, src/gnomemeeting.cpp, 
	src/main_window.cpp, src/main_window.h, src/urlhandler.cpp: Removed
	toolbar.h from the headers. Added function to update the Control Panel
	Section menu and use it in the notifiers.

2004-08-30  Damien Sandras  <dsandras@gnome.org>

	* po/POTFILES.in: Removed toolbar.*.

	* src/toolbar.*: Removed those files and integrated the code into