@@ -1,4 +1,5 @@
 [Desktop Entry]
+Encoding=UTF-8
 _Name=GnomeMeeting
 TryExec=gnomemeeting
 _GenericName=Videoconferencing
@@ -6,6 +7,6 @@ _Comment=Talk to people over the Internet
 StartupNotify=true
 Exec=gnomemeeting
 Icon=gnomemeeting-logo-icon.png
-Terminal=0
+Terminal=false
 Type=Application
-Categories=Application;Network;
+Categories=GNOME;Application;Network;
