@@ -1,4 +1,10 @@
-2004-00-01  Damien Sandras  <dsandras@gnome.org>
+2004-09-04  Damien Sandras  <dsandras@gnome.org>
+
+	* gnomemeeting.desktop.in: Applied patch from Stephane Loeuillet.
+
+	* src/addressbook_window.cpp: Added patch from Alessio Dessi.
+
+2004-09-01  Damien Sandras  <dsandras@gnome.org>
 
 	* src/endpoint.cpp, src/gatekeeper.cpp, src/gnomemeeting.cpp, 
 	src/ils.cpp, src/lid.cpp, src/main_window.cpp, src/main_window.h,
